# AEGIS

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  package-lock.json  requirements.txt  start-app.sh  start-local.sh  test_structured.py
.claude/: 01-current-phase.md  01-session-history.md  settings.local.json
.claude/hooks/: README.md  agent_template.py  audit_bridge.py
.claude/subagents/: implementer.md  orchestrator.md
.code-map/: code-map.json  instance-graphs.json
.codex/: AGENTS.md
.gemini/: 01-current-phase.md  01-session-history.md  CUSTOM_INSTRUCTIONS.md
code_map/: cpp_bridge.py  database.py  git_history.py  models.py  server.py  settings.py  stage_toolkit.py  state.py  watcher.py
code_map/api/: analysis.py  audit.py  call_flow.py  claude_permissions.py  contracts.py  drift.py  instance_graph.py  notify.py  routes.py  schemas.py  similarity.py  stage.py  terminal.py  tracer.py
code_map/api/handlers/: approval.py  base.py  cli_handler.py  mcp_proxy_handler.py  sdk_handler.py
code_map/audit/: file_watcher_hook.py  hooks.py  storage.py
code_map/contracts/: __init__.py  discovery.py  evidence.py  rewriter.py  schema.py
code_map/contracts/languages/: cpp.py  python.py
code_map/contracts/llm/: extractor.py
code_map/contracts/patterns/: __init__.py  static.py
code_map/drift/: analyzer.py  detectors.py  models.py
code_map/graph_analysis/call_flow/: __init__.py  constants.py  cpp_extractor.py  extractor.py  factory.py  models.py  ts_extractor.py  type_resolver.py
code_map/insights/: storage.py
code_map/integrations/: ollama_service.py
code_map/linters/: pipeline.py  storage.py
code_map/mcp/: __init__.py  approval_bridge.py  constants.py  mcp_config_template.json  permission_server.py  socket_server.py  tool_proxy_server.py
code_map/services/: insights_service.py  linters_service.py  notify_handlers.py  watcher_manager.py
code_map/terminal/: __init__.py  agent_parser.py  claude_runner.py  codex_runner.py  gemini_runner.py  json_parser.py  mcp_proxy_runner.py  pty_parser.py  pty_runner.py  pty_shell.py  sdk_runner.py  socketio_pty.py  tool_approval.py
code_map/uml/: builder.py  converter.py
code_map/v2/: __init__.py  builder.py  models.py  service.py  storage.py
code_map/v2/call_flow/: __init__.py  cpp_extractor.py  extractor.py  models.py  ts_extractor.py
code_map/v2/composition/: __init__.py  base.py  cpp.py  python.py  typescript.py
cpp/: CMakeLists.txt
cpp/src/: analyzer.cpp  analyzer.hpp  main.cpp  metrics.cpp  metrics.hpp  scanner.cpp  scanner.hpp
cpp/src/ipc/: json_protocol.cpp  json_protocol.hpp  socket_server.cpp  socket_server.hpp
cpp/src/models/: clone_types.hpp
cpp/src/tokenizers/: cpp_normalizer.cpp  cpp_normalizer.hpp  js_normalizer.cpp  js_normalizer.hpp  python_normalizer.cpp  python_normalizer.hpp
cpp/tests/: CMakeLists.txt  test_metrics.cpp  test_scanner.cpp  validate_json_schema.py
cpp/tests/fixtures/: clone_type1_a.py  clone_type1_b.py  clone_type2_a.py  clone_type2_b.py  clone_type3_a.py  clone_type3_b.py  no_clones.py
cpp/tests/fixtures/edge_cases/: advanced_python_a.py  advanced_python_b.py
cpp/tests/fixtures/precision/: true_negatives.py  true_positives.py
cpp/tests/fixtures/stress/: generate_stress_files.py  large_file_0.py  large_file_0_dup.py  large_file_1.py  large_file_2.py  large_file_3.py  large_file_4.py
cpp/tests/fixtures/stress/many_files/: module_0.py  module_1.py  module_10.py  module_11.py  module_12.py  module_13.py  module_14.py  module_15.py  module_16.py  module_17.py  module_18.py  module_19.py  module_2.py  module_20.py  module_21.py  module_22.py  module_23.py  module_24.py  module_25.py  module_26.py  module_27.py  module_28.py  module_29.py  module_3.py  module_30.py  module_31.py  module_32.py  module_33.py  module_34.py  module_35.py  module_36.py  module_37.py  module_38.py  module_39.py  module_4.py  module_40.py  module_41.py  module_42.py  module_43.py  module_44.py  (+10 more)
docs/: AEGIS_AGENT_WORKFLOW.md  AEGIS_V2_SPECIFICATION_UML_2_XML.md  DIAGNOSTICO_TERMINAL_PTY.md  audit-trail.md  backend-improvements.md  claude-agent-streaming.md  mcp-permission-server-design.md  mcp-proxy-tool-approval.md  posible-solucion-tool-approval.md  refactoring-mcp-proxy-checklist.md  sdk-tool-approval-architecture.md
docs/cpp_analyzer/: architecture.md
docs/method-flow-designer/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: agentClient.ts  (+4 more)
playground_zone/: operaciones_basicas.py
stage_init/: cli.py  initializer.py  templates.py
tests/: test_agent_bridge.py  test_api.py  test_audit_hooks.py  test_call_flow_baseline.py  test_codex_runner.py  test_complexity_consistency.py  test_contracts.py  test_database.py  test_drift.py  test_evidence.py  test_l4_analyzers.py  test_l4_python_analyzers.py  test_l4_typescript_analyzers.py  test_similarity_integration.py  test_terminal_reconnect.md  test_type_resolver.py  test_v2_composition.py  test_v2_graph.py  test_v2_service.py  test_v2_storage.py
tests/call-flow-program-test-python/: call-flow-test.cpp  even_or_odd.py  numer_utils.py
tmp_test/: custom_math.py  test_custom_math.py
tmp_test/.gemini/: 01-current-phase.md
xml test/: math-operations-test-v1.0.0.xml
(+103 files in other folders)
